# Sem-3-OJT

./: .env  .env.example  DATABASE_SETUP.md  QUICK_START_DB.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_products_table.py
app/: __init__.py  cache.py  config.py  database.py  main.py
app/api/: deps.py
app/api/routes/: __init__.py  search.py
app/db/: seed.py
app/models/: product.py
app/repositories/: product_repository.py
app/schemas/: search.py
app/services/: search.py  synonyms.py
product_search_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py
