[project]
name = "product-search-api"
version = "0.1.0"
description = "Fast, filterable product search API built with FastAPI, PostgreSQL, and Redis."
requires-python = ">=3.11"
authors = [
  { name = "OJT Project Team" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.2.1",
  "redis>=5.0.0",
  "alembic>=1.13.0",
  "httpx>=0.27.0",
  "python-slugify>=8.0.0",
  "orjson>=3.9.0",
  "tenacity>=8.2.3",
  "structlog>=24.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
  "faker>=25.0.0",
  "aiosqlite>=0.19.0",
  "httpx>=0.27.0"
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = [
  "app"
]

[tool.ruff]
line-length = 100
target-version = "py311"

